# SpriteForge

./: .gitignore  BUILD_EXECUTABLE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  RELEASE_GUIDE.md  TODO.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
.github/workflows/: python-tests.yml  release-build.yml
examples/: README.md  example_usage.py
spriteforge/: __init__.py  app.py  image_processor.py  logger.py
tests/: test_image_processor.py
